# HAEEAI

./: .gitignore  pyproject.toml
aiplant/: __init__.py  main.py
aiplant/api/: app.py  config.py  dependencies.py
aiplant/api/routers/: aiplant.py  model.py
aiplant/bluetooth/: adapter.py  exceptions.py
aiplant/database/: eeprom.py  models.py
aiplant/model/: labeler.py  models.py  waterer.py
arduino/: aiplant.ino
data/: environment.csv
model/: model.h  model.keras  model.tflite
