[tool.poetry]
name = "aiplant"
version = "0.1.0"
description = "HAEEI project"
authors = ["Filippo Manzardo <film@bendingspoons.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.11"

aiofiles = "^23.2.1"
fastapi = "^0.108.0"
pydantic = "^2.5.3"
uvicorn = "^0.25.0"


[tool.poetry.group.dev.dependencies]
black = "^23.12.1"
isort = "^5.13.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
